--- a/app/assets/stylesheets/pages/cocktails.scss
+++ b/app/assets/stylesheets/pages/cocktails.scss
@@ -6,7 +6,7 @@ body
 {
   margin:50px auto 0 auto;
   width:100%;
-  display:flex;
+  // display:flex;
   align-items:space-around;
   max-width:1200px;
 }
@@ -25,6 +25,7 @@ body
   overflow:hidden;
   color:white;
   font-family:'Roboto';
+  border-radius: 3px;
 
 }
 .tile img
